<resources>
    <string name="app_name">Orders App</string>
    <string name="action_settings">Ρυθμίσεις</string>
    <string name="UserId">USER ID</string>
    <string name="PASSWORD">PASSWORD</string>
    <string name="Login">Σύνδεση</string>
    <string name="settings">Ρυθμίσεις</string>
    <string name="dbUser">Database User</string>
    <string name="dbPass">Database Password</string>
    <string name="dbName">Database Name</string>
    <string name="dbIP">Server IP</string>
    <string name="save">Αποθήκευση</string>
    <string name="categories">Επιλογή Πόστου</string>
    <string name="productCat">Choose product</string>
    <string name="table_label">Τραπέζι: </string>
    <string name="search">Αναζήτηση</string>
    <string name="commentHint">Προσθέστε σχόλιο για το προιόν</string>
    <string name="submit">Υποβολή</string>
    <string name="qty">Ποσότητα: </string>
    <string name="products">Περισσότερα προιόντα</string>
    <string name="euro">€</string>
    <string name="back">Επιστροφή</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
